# selene_docs

./: .readthedocs.yml  Makefile  README.md  introduction.rst  make.bat  pyproject.toml
assets/_static/: custom.css
assets/_templates/: sidebarintro.html
source/: advanced.rst  collection_condition.md  condition.md  conf.py  configuration.md  elements.md  elements_collection.md  index.rst  introduction.md  page_objects.md  quick_start.md  selectors.md  selene.md  web_driver_runner.md
source/includes/: redirect-banner.rst
